syntax = "proto3";

message ClassMethod {
  message Animal {
    required string name = 1;
    required double age = 2;
  }
}